Improve style a bit

--- a/frontend/src/scss/_buttons.scss
+++ b/frontend/src/scss/_buttons.scss
@@ -3,6 +3,7 @@
   border: $border-width solid $gray-color;
   color: $gray-color-dark;
   height: 2rem;
+  line-height: 1.2rem;
 
   svg {
     color: $gray-color-dark;
