--- a/frontend/src/scss/_utilities.scss
+++ b/frontend/src/scss/_utilities.scss
@@ -47,7 +47,7 @@
   font-size: $font-size-lg;
 }
 
-.arrow-box {
+.triangle-top {
   &::before {
     background: $light-color;
     box-shadow: 0 0.05rem 0.2rem rgba(46, 62, 72, 0.3);
