display activate / deactivate icon

--- a/frontend/src/scss/_tables.scss
+++ b/frontend/src/scss/_tables.scss
@@ -66,6 +66,11 @@
     }
   }
 
+  tr.rejected td {
+    color: $gray-color;
+    font-style: italic;
+  }
+
   tr:last-child td {
     border-bottom: 0;
   }
