--- a/frontend/src/scss/_utilities.scss
+++ b/frontend/src/scss/_utilities.scss
@@ -50,24 +50,14 @@
 .triangle-top {
   &::before {
     background: $light-color;
-    box-shadow: 0 0.05rem 0.2rem rgba(46, 62, 72, 0.3);
+    box-shadow: -1px -1px 1px -1px rgba(0, 0, 0, .2);
     content: "";
     height: .8rem;
     position: absolute;
-    right: 1.2rem;
-    top: -.4rem;
+    right: .8rem;
+    top: -.35rem;
     transform: rotate(45deg);
     width: .8rem;
-  }
-
-  &::after {
-    background: #fff;
-    content: "";
-    height: 1rem;
-    position: absolute;
-    right: .8rem;
-    top: 0;
-    width: 1.8rem;
   }
 }
 
