Fix table in company settings users

--- a/frontend/src/scss/_tables.scss
+++ b/frontend/src/scss/_tables.scss
@@ -36,6 +36,11 @@
         max-width: 120px;
       }
 
+      &-mw-230 {
+        min-width: 230px;
+        max-width: 250px;
+      }
+
       &-mw-120 {
         min-width: 120px;
         max-width: 150px;
