Fix not found assets and improve code

--- a/frontend/src/scss/_datepicker.scss
+++ b/frontend/src/scss/_datepicker.scss
@@ -51,7 +51,7 @@
 
   .month-year-picker-result {
     border: .05rem solid $gray-color;
-    background: $light-color url('/static/img/ico-calendar.7bd5648.svg') calc(100% - .4rem) center/0.8rem 0.8rem no-repeat;
+    background: $light-color url('../assets/ico-calendar.svg') calc(100% - .4rem) center/0.8rem 0.8rem no-repeat;
     border-radius: 0.15rem;
     padding: 0.425rem 0.4rem;
     margin-right: .5rem;
