--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,6 +50,8 @@
 @import 'spectre.css/src/animations';
 @import 'spectre.css/src/utilities';
 
+// Custom
+@import 'modules/error_pages';
 .auth-form {
   background-color: #fff;
   margin-top: 80px;
