--- a/app/views/pages/page_404.html.erb
+++ b/app/views/pages/page_404.html.erb
@@ -1,1 +1,12 @@
-<h1>404 not found</h1>
+<div class="container">
+  <div class="columns">
+    <div class="column col-4 col-mx-auto">
+      <img class="error-img" src="<%= asset_url('404.png') %>" alt="404 image">
+      <div class="error-content text-center">
+        <h2 class="error-content-title">Nothing to see here, Captain!</h2>
+        <h4 class="error-content-subtitle">Punch the button below to space jump</h4>
+        <button class="btn btn-primary">To Homepage</button>
+      </div>
+    </div>
+  </div>
+</div>
