--- a/app/assets/stylesheets/modules/error_pages.scss
+++ b/app/assets/stylesheets/modules/error_pages.scss
@@ -8,9 +8,13 @@
 
   &-title {
     margin: 0;
+    font-size: 1.6rem;
+    color: #363636;
   }
 
   &-subtitle {
     margin: 0.8rem 0;
+    font-size: 0.8rem;
+    color: #6c777e;
   }
 }
