--- a/app/views/pages/page_404.html.erb
+++ b/app/views/pages/page_404.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="columns">
-    <div class="column col-4 col-mx-auto">
+    <div class="column col-6 col-xs-10 col-mx-auto">
       <img class="error-img" src="<%= asset_url('404.png') %>" alt="404 image">
+    </div>
+    <div class="coumns col-10 col-mx-auto">
       <div class="error-content text-center">
         <h2 class="error-content-title">Nothing to see here, Captain!</h2>
         <h4 class="error-content-subtitle">Punch the button below to space jump</h4>
