Make header & footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,3 +55,6 @@
 @import 'base/mixins';
 @import 'modules/error_pages';
 @import 'modules/login';
+@import 'modules/navbar';
+@import 'modules/footer';
+@import 'modules/error_pages';
