--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,25 @@
-<header>
-  <h1>HEADER</h1>
+<header class="nav container">
+  <div class="navbar">
+    <div class="navbar-section navbar-control">
+      <a href="/"><div class="navbar-logo"></div></a>
+      <btn class="menu-burger"></btn>
+    </div>
+    <div class="navbar-section navbar-menu">
+      <div class="signin-form">
+        <span class="close float-right"></span>
+        <p class="text-bold">Please enter your company's namespace</p>
+        <div class="input-group">
+          <input type="text" placeholder="your-company-namespace" class="form-input">
+          <span>.punch.com</span>
+          <button class="btn btn-primary">Go</button>
+        </div>
+      </div>
+      <ul class="navbar-utilities">
+        <li><a href="#" class="navbar-link">Features</a></li>
+        <li><a href="#" class="navbar-link">Documentation</a></li>
+        <li><a href="#" class="navbar-link">Contact us</a></li>
+      </ul>
+      <btn class="btn navbar-link signin-btn">Sign In</btn>
+    </div>
+  </div>
 </header>
