--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,12 +1,12 @@
-<header class="nav container">
+<header id="index-nav" class="nav container">
   <div class="navbar">
     <div class="navbar-section navbar-control">
       <a href="/"><div class="navbar-logo"></div></a>
-      <btn class="menu-burger"></btn>
+      <btn class="menu-burger" onclick="toggleIndexMenu()"></btn>
     </div>
     <div class="navbar-section navbar-menu">
       <div class="signin-form">
-        <span class="close float-right"></span>
+        <span class="close float-right" onclick="toggleSigninForm()"></span>
         <p class="text-bold">Please enter your company's namespace</p>
         <div class="input-group">
           <input type="text" placeholder="your-company-namespace" class="form-input">
@@ -19,7 +19,7 @@
         <li><a href="#" class="navbar-link">Documentation</a></li>
         <li><a href="#" class="navbar-link">Contact us</a></li>
       </ul>
-      <btn class="btn navbar-link signin-btn">Sign In</btn>
+      <btn class="btn navbar-link signin-btn" onclick="toggleSigninForm()">Sign In</btn>
     </div>
   </div>
 </header>
