--- a/app/views/password_reset/new.html.erb
+++ b/app/views/password_reset/new.html.erb
@@ -1,3 +1,4 @@
+<img class="punch-logo centered" src="<%= asset_url("punch_logo.png") %>" alt="punch logo">
 <div class="auth-form centered">
   <%= render('shared/flash', type: 'error', message: flash[:alert], btn_clear_opened: true) if flash[:alert] %>
   <%= render('shared/flash', type: 'success', message: flash[:notice]) if flash[:notice] %>
@@ -13,9 +14,15 @@
           <%= f.email_field :email, class: 'form-input', placeholder: t('password_reset.new.email') %>
         </div>
         <div class="form-group">
-          <%= f.submit t('password_reset.new.send_link'), class: 'btn btn-success btn-block' %>
+          <%= f.submit t('password_reset.new.send_link'), class: 'btn btn-primary btn-block' %>
         </div>
       <% end %>
     </div>
   </div>
+</div>
+<div class="auth-footer text-center">
+  <a href="#">About</a>
+  <a href="#">Contact Us</a>
+  <a href="#">Terms</a>
+  <a href="#">Privacy</a>
 </div>
