Add rails layout

--- a/app/views/shared/_index-header.html.erb
+++ b/app/views/shared/_index-header.html.erb
@@ -1,4 +1,4 @@
-<header class="nav nav-inverse container">
+<header id="index-nav" class="nav container">
   <div class="navbar">
     <div class="navbar-section navbar-control">
       <a href="/"><div class="navbar-logo"></div></a>
