update login css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,5 +51,7 @@
 @import 'spectre.css/src/utilities';
 
 // Custom
+@import 'base/variables';
+@import 'base/mixins';
 @import 'modules/error_pages';
 @import 'modules/login';
