update login html

--- a/app/views/password_reset/edit.html.erb
+++ b/app/views/password_reset/edit.html.erb
@@ -1,4 +1,4 @@
-<img class="punch-logo centered" src="<%= asset_url("punch_logo.png") %>" alt="punch logo">
+<img class="punch-logo centered" src="<%= asset_url('punch_logo.png') %>" alt="punch logo">
 <div class="auth-form centered">
   <div class="panel">
     <div class="panel-header text-center">
@@ -22,3 +22,4 @@
     </div>
   </div>
 </div>
+<%= render 'shared/auth_footer' %>
