--- a/app/views/pages/page_403.html.erb
+++ b/app/views/pages/page_403.html.erb
@@ -1,3 +1,7 @@
+<% content_for(:header) do %>
+<%= render 'shared/header' %>
+<% end %>
+
 <div class="container">
   <div class="columns">
     <div class="column col-6 col-xs-10 col-mx-auto">
