--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,11 +2,13 @@
   <div class="navbar">
     <div class="navbar-section navbar-control">
       <a href="/"><div class="navbar-logo"></div></a>
-      <btn class="menu-burger" onclick="toggleIndexMenu()"></btn>
+      <btn class="menu-burger">
+        <svg fill="#6C777E" fill-rule="evenodd" width="22px" height="22px" viewBox="0 0 22 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M0,17 L24,17 L24,20 L0,20 L0,17 Z M0,10 L24,10 L24,13 L0,13 L0,10 Z M4,3 L24,3 L24,6 L4,6 L4,3 Z" id="path-1"></path></svg>
+      </btn>
     </div>
     <div class="navbar-section navbar-menu">
       <div class="signin-form">
-        <span class="close float-right" onclick="toggleSigninForm()"></span>
+        <span class="close float-right"></span>
         <p class="text-bold">Please enter your company's namespace</p>
         <div class="input-group">
           <input type="text" placeholder="your-company-namespace" class="form-input">
@@ -19,7 +21,7 @@
         <li><a href="#" class="navbar-link">Documentation</a></li>
         <li><a href="#" class="navbar-link">Contact us</a></li>
       </ul>
-      <btn class="btn navbar-link signin-btn" onclick="toggleSigninForm()">Sign In</btn>
+      <btn class="btn  btn-signin navbar-link">Sign In</btn>
     </div>
   </div>
 </header>
