--- a/frontend/src/scss/_datepicker.scss
+++ b/frontend/src/scss/_datepicker.scss
@@ -86,19 +86,17 @@
   &.vdp-datepicker__calendar .cell:not(.blank):not(.disabled).day:hover,
   &.vdp-datepicker__calendar .cell:not(.blank):not(.disabled).month:hover,
   &.vdp-datepicker__calendar .cell:not(.blank):not(.disabled).year:hover {
-    border: 1px solid $border-color;
+    border: 0;
     color: $primary-color;
-    border-radius: 50%;
     &.selected {
-      border: 1px solid $primary-color;
-      color: $light-color;
+      border: 0;
+      color: $primary-color;
     }
   }
   &.vdp-datepicker__calendar .cell.selected,
   &.vdp-datepicker__calendar .cell.selected.highlighted,
   &.vdp-datepicker__calendar .cell.selected:hover {
-    background: $primary-color;
-    color: $light-color;
-    border-radius: 50%;
+    background: inherit;
+    color: $primary-color;
   }
 }
