--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,8 +53,24 @@
 // Custom
 @import 'base/variables';
 @import 'base/mixins';
+@import 'modules/base';
 @import 'modules/error_pages';
 @import 'modules/login';
 @import 'modules/navbar';
 @import 'modules/footer';
-@import 'modules/error_pages';
+@import 'modules/typography';
+@import 'modules/buttons';
+@import 'modules/form';
+@import 'modules/layout';
+@import 'modules/avatars';
+@import 'modules/tiles';
+@import 'modules/utilities';
+
+// Modules
+@import 'modules/hero';
+@import 'modules/features';
+@import 'modules/cards';
+@import 'modules/download';
+@import 'modules/scroller';
+@import 'modules/comment';
+@import 'modules/trial';
