--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <div id="main" class="main">
-  <section id="hero" class="hero bg-linear-blue">
+  <section class="hero bg-linear-blue">
     <div class="container">
       <div class="columns hero-content">
         <div class="column col-6 col-md-8 col-sm-12 col-mx-auto hero-introduction">
@@ -23,7 +23,7 @@
     </div>
   </section>
 
-  <section id="customer" class="bg-white">
+  <section class="bg-white">
     <div class="container scroller">
       <div class="scroller-control">
         <div class="scroller-slider">
@@ -69,7 +69,7 @@
     </div>
   </section>
 
-  <section id="features" class="features bg-white">
+  <section class="features bg-white">
     <div class="container">
       <h2 class="section-title">Why punch?</h2>
       <div class="columns">
@@ -132,7 +132,7 @@
     </div>
   </section>
 
-  <section id="download" class="download bg-gray">
+  <section class="download bg-gray">
     <div class="container">
       <h2 class="section-title">Available for Android & iOS</h2>
       <ul class="download-widget">
@@ -169,7 +169,7 @@
     </div>
   </section>
 
-  <section id="comment" class="comment bg-linear-gray">
+  <section class="comment bg-linear-gray">
     <h2 class="comment-title">What customer think <br>about us!</h2>
     <div class="comment-group scroller">
       <div class="scroller-control">
@@ -227,7 +227,7 @@
     </div>
   </section>
 
-  <section id="trial" class="trial bg-linear-blue">
+  <section class="trial bg-linear-blue">
       <div class="trial-content">
         <h2 class="trial-title">Free trial up to 30 days sign up now !</h2>
         <div class="input-group">
