--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,24 +1,26 @@
-<footer class="footer container">
-  <div class="navbar">
-    <section class="navbar-section">
-      <ul class="footer-utility">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact us</a></li>
-        <li><a href="#">Terms</a></li>
-        <li><a href="#">Privacy</a></li>
-      </ul>
-    </section>
-    <section class="navbar-center">
-      <p>© 2018 - 1PAC Vietnam Co., LTD</p>
-    </section>
-    <section class="navbar-section">
-      <div class="language-switcher">
-        <label for="language-switcher-box" class="language-switcher-label">Languages: </label>
-        <select id="language-switcher-box" class="language-switcher-box">
-          <option value="en" selected>English</option>
-          <option value="jp">日本語</option>
-        </select>
-      </div>
-    </section>
+<footer class="footer">
+  <div class="container">
+    <div class="navbar">
+      <section class="navbar-section">
+        <ul class="footer-utility">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact us</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+        </ul>
+      </section>
+      <section class="navbar-center">
+        <p>© 2018 - 1PAC Vietnam Co., LTD</p>
+      </section>
+      <section class="navbar-section">
+        <div class="language-switcher">
+          <label for="language-switcher-box" class="language-switcher-label">Languages: </label>
+          <select id="language-switcher-box" class="language-switcher-box">
+            <option value="en" selected>English</option>
+            <option value="jp">日本語</option>
+          </select>
+        </div>
+      </section>
+    </div>
   </div>
 </footer>
