--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -14,6 +14,7 @@ $color-blue-lightest: #fafcff;
 $color-gray-lightest: #f0f3f7;
 $color-dark-lightest: #6c777e;
 $color-brand: #abb2b6;
+$color-burger: #6c777e;
 
 $header-border-color: #e0e0e0;
 $border-color: #e3e3e7;
