privacy and terms page

--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -2,4 +2,48 @@
 <%= render 'shared/header' %>
 <% end %>
 
-<h1>Privacy</h1>
+<div id="main" class="main">
+  <div class="document privacy">
+    <h1>Privacy Policies</h1>
+    <div class="document-container">
+      <ol>
+        <li>
+          <div>
+            <h4>Privacy policy A</h4>
+            <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>Privacy policy B</h4>
+            <ul>
+              <li>Is simply dummy text of the printing and typesetting industry.</li>
+              <li>Is simply dummy text of the printing and typesetting industry.</li>
+              <li>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>Privacy policy C</h4>
+            <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <ul>
+              <li>Is simply dummy text of the printing and typesetting industry.</li>
+              <li>Is simply dummy text of the printing and typesetting industry.</li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>Privacy policy D</h4>
+            <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <ul>
+              <li>Is simply dummy text of the printing and typesetting industry.</li>
+              <li>Is simply dummy text of the printing and typesetting industry.</li>
+            </ul>
+          </div>
+        </li>
+      </ol>
+    </div>
+  </div>
+</div>
