--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -2,4 +2,48 @@
 <%= render 'shared/header' %>
 <% end %>
 
-<h1>Term of service</h1>
+<div id="main" class="main">
+  <div class="document">
+    <h1>Term of use Punch's Services</h1>
+    <div class="document-container">
+      <ol>
+        <li>
+          <div>
+            <h4>First terms or conditions</h4>
+            <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>Second terms or conditions</h4>
+            <ul>
+              <li>Is simply dummy text of the printing and typesetting industry.</li>
+              <li>Is simply dummy text of the printing and typesetting industry.</li>
+              <li>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>Third terms or conditions</h4>
+            <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <ul>
+              <li>Is simply dummy text of the printing and typesetting industry.</li>
+              <li>Is simply dummy text of the printing and typesetting industry.</li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>Fourth terms or conditions</h4>
+            <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <ul>
+              <li>Is simply dummy text of the printing and typesetting industry.</li>
+              <li>Is simply dummy text of the printing and typesetting industry.</li>
+            </ul>
+          </div>
+        </li>
+      </ol>
+    </div>
+  </div>
+</div>
