--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,3 +1,6 @@
 <% content_for(:header) do %>
-<%= render 'shared/header' %>
+<%= render 'shared/index-header' %>
 <% end %>
+<section class="section-mh bg-linear-blue">
+  <h1>Coming Soon!</h1>
+</section>
