--- a/app/assets/stylesheets/modules/_utilities.scss
+++ b/app/assets/stylesheets/modules/_utilities.scss
@@ -6,7 +6,6 @@
     content: '';
     width: 100%;
     height: 100%;
-    display: block;
     position: absolute;
     top: 0;
     left: 0;
@@ -30,12 +29,16 @@
   background: $color-gray-lightest;
 }
 
-.mt-40 {
-  margin-top: 2rem;
-}
+.section-mh {
+  height: calc(100vh - 4.8rem);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-.mt-24 {
-  margin-top: 1.2rem;
+  h1 {
+    color: $light-color;
+    z-index: 4;
+  }
 }
 
 .section-title {
