--- a/app/views/pages/page_500.html.erb
+++ b/app/views/pages/page_500.html.erb
@@ -2,15 +2,17 @@
 <%= render 'shared/header' %>
 <% end %>
 
-<div class="container">
-  <div class="columns">
-    <div class="column col-6 col-xs-10 col-mx-auto">
-      <img class="error-img" src="<%= asset_url('500.png') %>" alt="500 image">
-    </div>
-    <div class="column col-10 col-mx-auto">
-      <div class="error-content text-center">
-        <h2 class="error-content-title">Something’s wrong, Captain!</h2>
-        <h4 class="error-content-subtitle">Just try to refresh the page, the problem may be temporary.</h4>
+<div id="main" class="main mt-64 pb-80">
+  <div class="container">
+    <div class="columns">
+      <div class="column col-6 col-xs-10 col-mx-auto">
+        <img class="error-img" src="<%= asset_url('500.png') %>" alt="500 image">
+      </div>
+      <div class="column col-10 col-mx-auto">
+        <div class="error-content text-center">
+          <h2 class="error-content-title">Something’s wrong, Captain!</h2>
+          <h4 class="error-content-subtitle">Just try to refresh the page, the problem may be temporary.</h4>
+        </div>
       </div>
     </div>
   </div>
