--- a/app/assets/stylesheets/modules/_features.scss
+++ b/app/assets/stylesheets/modules/_features.scss
@@ -1,3 +1,71 @@
 .features {
   padding: 1.2rem 0 4.8rem;
 }
+
+.description {
+  background-color: $light-color;
+  padding-bottom: 4rem;
+  padding-top: 3.6rem;
+
+  p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+  .description-content {
+    display: table;
+
+    &.col-reverse {
+      flex-direction: column-reverse;
+    }
+
+    @include respond-to-smaller-tablet() {
+      display: flex;
+    }
+
+    &:not(:first-of-type) {
+      margin-top: 10rem;
+
+      @include respond-to-smaller-tablet() {
+        margin-top: 2.5rem;
+      }
+    }
+  }
+
+  .description-section {
+    display: table-cell;
+    vertical-align: middle;
+
+    .description-text {
+      width: 13.2rem;
+
+      @include respond-to-smaller-tablet() {
+        width: 100%;
+        margin-top: 2rem;
+        font-size: .4rem;
+      }
+
+      svg {
+        color: $primary-color;
+        margin-bottom: 1rem;
+
+        @include respond-to-smaller-tablet() {
+          display: none;
+        }
+      }
+
+      h3 {
+        margin-bottom: .15rem;
+
+        @include respond-to-smaller-tablet() {
+          font-size: .8rem;
+        }
+      }
+    }
+
+    img {
+      display: block;
+      width: 100%;
+    }
+  }
+}
