--- a/app/assets/stylesheets/modules/_utilities.scss
+++ b/app/assets/stylesheets/modules/_utilities.scss
@@ -17,6 +17,10 @@
   }
 }
 
+.text-blue {
+  color: $primary-color;
+}
+
 .bg-linear-gray {
   background: linear-gradient(180deg, $light-color 0%, $color-gray-lightest 100%);
 }
@@ -48,4 +52,16 @@
   @include respond-to-mobile {
     margin-bottom: 2rem;
   }
+}
+
+.pb-80 {
+  padding-bottom: 4rem;
+}
+
+.mt-64 {
+  margin-top: 3.2rem;
+}
+
+.mt-40 {
+  margin-top: 2rem;
 }
