--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -1,14 +1,27 @@
 .btn {
   font-size: .7rem;
-  padding: .5rem .8rem;
+  padding: .5rem 1.2rem;
   height: auto;
   background: $primary-color;
   border: $primary-color;
   color: $light-color;
 
-  &:hover {
+  &:hover,
+  &:active,
+  &:focus {
+    outline: 0;
     background: $primary-color;
     border: $primary-color;
     color: $light-color;
+  }
+
+  &.btn-primary {
+    &:hover,
+    &:active,
+    &:focus {
+      border: .05rem solid $light-color;
+      background: $light-color;
+      color: $primary-color;
+    }
   }
 }
