--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -4,12 +4,14 @@
   margin-bottom: 1.6rem;
 
   .card-header {
+    font-weight: 700;
     margin: 2rem 0 .8rem;
   }
 
   .card-body {
     font-size: .7rem;
-    margin-bottom: .4rem;
+    margin-bottom: .6rem;
+    color: $color-dark-lightest;
   }
 
   &.card-comment {
@@ -23,10 +25,19 @@
     .card-header {
       margin-top: 0;
     }
+
+    .card-body {
+      color: $color-darker;
+    }
   }
 
   &.card-center {
     padding-top: 2rem;
     padding-bottom: 2rem;
+
+    @include respond-to-mobile() {
+      padding-top: 1.2rem;
+      padding-bottom: 1.2rem;
+    }
   }
 }
