--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -1,3 +1,20 @@
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: $color-darker
+}
+
+h1,
+h2 {
+  font-weight: 700;
+}
+
+h1 {
+  line-height: 1.2;
+}
+
 h2 {
   line-height: 1.25
 }
