--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <div id="main" class="main">
-  <section class="hero bg-linear-blue">
+  <div class="hero bg-linear-blue">
     <div class="container">
       <div class="columns hero-content">
         <div class="column col-6 col-md-8 col-sm-12 col-mx-auto hero-introduction">
@@ -21,9 +21,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
-  <section class="bg-white">
+  <div class="bg-white">
     <div class="container scroller">
       <div class="scroller-control">
         <div class="scroller-slider">
@@ -67,9 +67,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
-  <section class="features bg-white">
+  <div class="features bg-white">
     <div class="container">
       <h2 class="section-title">Why punch?</h2>
       <div class="columns">
@@ -130,9 +130,9 @@
         <a href="#" class="btn">See All Features</a>
       </div>
     </div>
-  </section>
+  </div>
 
-  <section class="download bg-gray">
+  <div class="download bg-gray">
     <div class="container">
       <h2 class="section-title">Available for Android & iOS</h2>
       <ul class="download-widget">
@@ -167,9 +167,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
-  <section class="comment bg-linear-gray">
+  <div class="comment bg-linear-gray">
     <h2 class="comment-title">What customer think <br>about us!</h2>
     <div class="comment-group scroller">
       <div class="scroller-control">
@@ -225,15 +225,15 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
-  <section class="trial bg-linear-blue">
-      <div class="trial-content">
-        <h2 class="trial-title">Free trial up to 30 days sign up now !</h2>
-        <div class="input-group">
-          <input type="email" class="form-input input-lg" placeholder="Enter your email!">
-          <button class="btn btn-primary input-group-btn btn-lg">Try it free</button>
-        </div>
+  <div class="trial bg-linear-blue">
+    <div class="trial-content">
+      <h2 class="trial-title">Free trial up to 30 days sign up now !</h2>
+      <div class="input-group">
+        <input type="email" class="form-input input-lg" placeholder="Enter your email!">
+        <button class="btn btn-primary input-group-btn btn-lg">Try it free</button>
       </div>
-  </section>
+    </div>
+  </div>
 </div>
