--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -27,6 +27,8 @@
 <link rel="apple-touch-icon" sizes="76x76" href="<%= asset_url('icon_76x76.png') %>">
 <link rel="icon" sizes="192x192" href="<%= asset_url('icon_192x192.png') %>">
 
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+
 <%= stylesheet_link_tag('application', media: 'all') %>
 </head>
 
