--- a/app/views/pages/page_403.html.erb
+++ b/app/views/pages/page_403.html.erb
@@ -2,7 +2,7 @@
 <%= render 'shared/header' %>
 <% end %>
 
-<div id="main" class="main">
+<div id="main" class="main pb-80">
   <div class="container">
     <div class="columns">
       <div class="column col-6 col-xs-10 col-mx-auto">
