--- a/app/views/pages/features.html.erb
+++ b/app/views/pages/features.html.erb
@@ -2,7 +2,7 @@
 <%= render 'shared/header' %>
 <% end %>
 
-<div id="main" class="main mt-64">
+<div id="main" class="main">
   <section class="description">
     <p class="text-center text-blue">Features</p>
     <h2 class="section-title">Some fancy introdution<br>about features</h2>
