--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -2,7 +2,7 @@
 <%= render 'shared/index-header' %>
 <% end %>
 
-<div id="main" class="main">
+<div id="main" class="main main-mt-0">
   <div class="hero bg-linear-blue">
     <div class="container">
       <div class="columns hero-content">
