--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,8 +5,8 @@
         <ul class="footer-utility">
           <li><a href="#">About</a></li>
           <li><a href="#">Contact us</a></li>
-          <li><a href="#">Terms</a></li>
-          <li><a href="#">Privacy</a></li>
+          <li><%= link_to "Terms", terms_path, class: "navbar-link" %></li>
+          <li><%= link_to "Privacy", privacy_path, class: "navbar-link" %></li>
         </ul>
       </section>
       <section class="navbar-center">
