--- a/app/assets/stylesheets/modules/_layout.scss
+++ b/app/assets/stylesheets/modules/_layout.scss
@@ -1,3 +1,10 @@
+.main {
+  margin-top: 3.2rem;
+
+  &-mt-0 {
+    margin-top: 0;
+  }
+}
 .container {
   padding-left: .8rem;
   padding-right: .8rem;
